# openGL-RPi-tutorial

./: CMakeLists.txt  README.md  raspberry-toolchain.cmake
common/: CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  cam_graphics.cpp  camera.cpp  camera.h  cameracontrol.cpp  cameracontrol.h  encode.h  graphics.cpp  graphics.h  mmalincludes.h  objloader.cpp  objloader.h  startScreen.cpp  startScreen.h  texture.cpp  texture.h
encode/: CMakeLists.txt  README.txt  encode.c
encode_OGL/: CMakeLists.txt  README.txt  main.c
encode_OGL/includes/: matrix.h  ogl.h  state.h
encode_OGL/src/: encode.c  encode.d  matrix.c  matrix.d  ogl.c  ogl.d  video.c  video.d
encode_main/: CMakeLists.txt  README.txt  encode.c  encode.h  main.c
playground/: CMakeLists.txt  playground.cpp
tutorial01_first_screen/: CMakeLists.txt  README.txt
tutorial02_red_triangle/: CMakeLists.txt  simplefragshader.glsl  simplevertshader.glsl  tutorial02.cpp  tutorial02_arc.cpp
tutorial02a_modelspace/: CMakeLists.txt  simplevertshader.glsl  tutorial02a.cpp
tutorial03_matrices/: CMakeLists.txt  simpletransformvertshader.glsl  tutorial03.cpp
tutorial04_coloured_cube/: CMakeLists.txt  colourfragshader.glsl  transformvertshader.glsl  tutorial04.cpp
tutorial05_gen_YUV_tex_disp/: CMakeLists.txt  README.txt  simplefragshader.glsl  tutorial05.cpp  yuvfragshader.glsl
tutorial05_tex/: CMakeLists.txt  README.txt  simplevertshader.glsl  texturefragshader.glsl  tutorial05.cpp
tutorial05_textured_cube/: CMakeLists.txt  tutorial05_working.cpp
tutorial06_tex_cam/: CMakeLists.txt  README.txt  simplevertshader.glsl  tutorial06.cpp
tutorial07_model_loading/: CMakeLists.txt  TextureFragmentShader.glsl  TransformVertexShader.glsl  tutorial07.cpp
tutorial08_basic_shading/: CMakeLists.txt  TextureFragmentShader.glsl  TransformVertexShader.glsl  tutorial08.cpp
