add_executable(tutorial05_tex
    tutorial05.cpp
    ../common/startScreen.cpp
    ../common/LoadShaders.cpp
    ../common/LoadShaders.h
    ../common/texture.cpp
    ../common/texture.h
)
target_link_libraries(tutorial05_tex
        ${RPi_LIBS}
        ${GL_LIBS}
)
file(
	COPY
	simplevertshader.glsl
	texturefragshader.glsl
	uvtemplate.bmp
	DESTINATION ${CMAKE_BINARY_DIR}/tutorial05_tex
)
